# train-your-fly

./: .gitignore  README.md  config.yaml  paths.py  pyproject.toml  quickstart.ipynb
configs/: config.py  config_multitasking_dirs.py  sweep_definitions.py
examples/: simple_training.py  training_with_csv_logger.py  training_with_wandb.py
src/trainyourfly/: __init__.py  config.py  train.py
src/trainyourfly/connectome_models/: graph_builder.py  graph_models.py  graph_models_helpers.py
src/trainyourfly/data/: data_processing.py
src/trainyourfly/eye_models/: neuron_mapper.py  voronoi_cells.py
src/trainyourfly/integrations/: __init__.py  base.py  wandb_tracker.py
src/trainyourfly/plots/: fly_plotter.py  plots.py
src/trainyourfly/utils/: csv_loader.py  debug_utils.py  downloader.py  image_processor.py  train_funcs.py  utils.py  wandb_logger.py
tests/: test_connectome.py  test_csv_loader.py  test_fly_plotter.py  test_freeze_dataprocessor.py  test_graph_builder.py  test_neuron_mapper.py  test_randomizers.py  test_train_funcs.py  test_voronoi.py
tests/fixtures/: graph_batch_v1.sha256
